Pushing new code test

--- a/logstash/pipeline/logstash.conf
+++ b/logstash/pipeline/logstash.conf
@@ -1,11 +1,12 @@
 input {
-	beats {
-		port => 5044
-	}
-
-	tcp {
-		port => 50000
-	}
+  http {
+    host => "0.0.0.0"  # Ensure this matches the network configuration accessible by the Python script
+    port => 8095       # Default port, adjust if necessary
+    codec => json {
+      charset => "UTF-8"
+      target => "event_data"
+    }     # Ensures incoming data is automatically treated as JSON
+  }
 }
 
 ## Add your filters / logstash plugins configuration here
@@ -13,7 +14,9 @@ input {
 output {
 	elasticsearch {
 		hosts => "elasticsearch:9200"
-		user => "logstash_internal"
-		password => "${LOGSTASH_INTERNAL_PASSWORD}"
+    	user => "elastic"     
+		password => "123al*"  # Use environment variable or directly specify the password
+        index => "heartbeatjson-%{+YYYY.MM.dd}"  # Custom index name that includes a date pattern
+
 	}
 }
