--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -2,20 +2,7 @@ version: '3.7'
 
 services:
 
-  # The 'setup' service runs a one-off script which initializes users inside
-  # Elasticsearch — such as 'logstash_internal' and 'kibana_system' — with the
-  # values of the passwords defined in the '.env' file. It also creates the
-  # roles required by some of these users.
-  #
-  # This task only needs to be performed once, during the *initial* startup of
-  # the stack. Any subsequent run will reset the passwords of existing users to
-  # the values defined inside the '.env' file, and the built-in roles to their
-  # default permissions.
-  #
-  # By default, it is excluded from the services started by 'docker compose up'
-  # due to the non-default profile it belongs to. To run it, either provide the
-  # '--profile=setup' CLI flag to Compose commands, or "up" the service by name
-  # such as 'docker compose up setup'.
+
   setup:
     profiles:
       - setup
@@ -38,7 +25,7 @@ services:
       MONITORING_INTERNAL_PASSWORD: ${MONITORING_INTERNAL_PASSWORD:-}
       BEATS_SYSTEM_PASSWORD: ${BEATS_SYSTEM_PASSWORD:-}
     networks:
-      - elk
+      - my_shared_network
     depends_on:
       - elasticsearch
 
@@ -64,7 +51,7 @@ services:
       # see: https://www.elastic.co/guide/en/elasticsearch/reference/current/bootstrap-checks.html
       discovery.type: single-node
     networks:
-      - elk
+      - my_shared_network
     restart: unless-stopped
 
   logstash:
@@ -84,7 +71,7 @@ services:
       LS_JAVA_OPTS: -Xms256m -Xmx256m
       LOGSTASH_INTERNAL_PASSWORD: ${LOGSTASH_INTERNAL_PASSWORD:-}
     networks:
-      - elk
+      - my_shared_network
     depends_on:
       - elasticsearch
     restart: unless-stopped
@@ -101,14 +88,24 @@ services:
     environment:
       KIBANA_SYSTEM_PASSWORD: ${KIBANA_SYSTEM_PASSWORD:-}
     networks:
-      - elk
+      - my_shared_network
     depends_on:
       - elasticsearch
     restart: unless-stopped
+  
+  consumer:
+    build:
+      context: .
+      dockerfile: Dockerfile.consumer
+    depends_on:
+      - logstash
+    networks:
+    - my_shared_network
+    restart: always
 
 networks:
-  elk:
-    driver: bridge
+  my_shared_network:
+    external: true
 
 volumes:
   elasticsearch:
